# raytracer_project

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  Syntax.md  User-guide.md  main.cpp  scene.txt
include/: parameters.hpp
include/accelerating_structures/: clustering.hpp  octree.hpp
include/auxiliary/: application.hpp  clustering.hpp  custom_stack.hpp  exit_status.hpp  min_max_coord.hpp  octree.hpp  randomgen.hpp  stack_based_custom_stack.hpp  timer.hpp  tracing.hpp  utils.hpp
include/file_readers/: bmp_reader.hpp  error.hpp  file.hpp  hdr_reader.hpp  mtl_parser.hpp  normal_map_reader.hpp  obj_parser.hpp  parsing_wrappers.hpp  raw_data.hpp  scene_parser.hpp
include/file_readers/image_files/: bmp_reader.hpp  hdr_reader.hpp  normal_map_reader.hpp  raw_data.hpp
include/file_readers/parsers/: mtl_parser.hpp  obj_parser.hpp  parsing_wrappers.hpp  scene_parser.hpp
include/image/: image.hpp  matrix.hpp
include/legacy/: legacy_source.hpp  source.hpp
include/legacy/light/: hit.hpp  legacy_hit.hpp
include/legacy/objects/: legacy_object.hpp  legacy_plane.hpp  legacy_sphere.hpp  object.hpp  plane.hpp  sphere.hpp
include/legacy/raytracing/: application.hpp  legacy_application.hpp  legacy_tracing.hpp  tracing.hpp
include/light/: hit.hpp  ray.hpp  vector.hpp
include/main_menu/: file_handler.hpp  menu.hpp  runtime_parameters.hpp
include/other/legacy/light/: legacy_hit.hpp
include/other/legacy/objects/: legacy_object.hpp  legacy_plane.hpp  legacy_sphere.hpp
include/other/legacy/raytracing/: legacy_tracing.hpp
include/other/legacy/source/: legacy_source.hpp
include/other/obsolete/postprocess/: blur.hpp
include/other/sky/: sky_bmp_reader.hpp  sky_color.hpp  sky_image.hpp  sky_render.hpp  sky_screen.hpp  sky_vector.hpp
include/parallel/: parallel.h  parallel.hpp
include/postprocess/: blur.hpp  glow.hpp
include/render/: render_loops.hpp
include/scene/: camera.hpp  scene.hpp
include/scene/bounding/: aabb.hpp  bounding.hpp
include/scene/light_sources/: infinite_area.hpp
include/scene/material/: background.hpp  barycentric.hpp  material.hpp  normal_map.hpp  texture.hpp  texture_info.hpp
include/scene/objects/: bounding.hpp  box.hpp  cylinder.hpp  object.hpp  plane.hpp  polygon.hpp  quad.hpp  sphere.hpp  triangle.hpp
include/scene/sources/: source.hpp
include/screen/: color.hpp  image.hpp  screen.hpp  sdl.hpp
include/sky/: bmp_reader.hpp  color.hpp  image.hpp  parameters.hpp  screen.hpp  sky_bmp_reader.hpp  sky_color.hpp  sky_image.hpp  sky_render.hpp  sky_screen.hpp  sky_vector.hpp  vector.hpp
include/tracing/: debug.hpp  direction.hpp  directions.hpp  multisample.hpp  tracing.hpp
parallel/: parallel.h
src/: main.cpp
src/accelerating_structures/: clustering.cpp  octree.cpp
src/auxiliary/: application.cpp  clustering.cpp  octree.cpp  random.cpp  randomgen.cpp  tracing.cpp
src/auxiliary/headers/: application.hpp  random.hpp  randomgen.hpp  tracing.hpp
src/file_readers/: bmp_reader.cpp  hdr_reader.cpp  merger.cpp  mtl_parser.cpp  normal_map_reader.cpp  obj_parser.cpp  raw_data.cpp  scene_parser.cpp
src/file_readers/headers/: bmp_reader.hpp
src/file_readers/image_files/: bmp_reader.cpp  hdr_reader.cpp  normal_map_reader.cpp  raw_data.cpp
src/file_readers/parsers/: mtl_parser.cpp  obj_parser.cpp  obj_parser_original.cpp  scene_parser.cpp
src/image/: matrix.cpp
src/legacy/: legacy.cpp  legacy_source.cpp  source.cpp
src/legacy/light/: hit.cpp  legacy_hit.cpp
src/legacy/objects/: legacy_object.cpp  legacy_plane.cpp  legacy_sphere.cpp  object.cpp  plane.cpp  sphere.cpp
src/legacy/raytracing/: application.cpp  legacy_application.cpp  legacy_tracing.cpp  tracing.cpp
src/light/: hit.cpp  light.cpp  ray.cpp  source.cpp  vector.cpp
src/light/headers/: hit.hpp  light.hpp  ray.hpp  source.hpp  vector.hpp
src/main_menu/: file_handler.cpp  menu.cpp
src/objects/: object.cpp  plane.cpp  sphere.cpp
src/objects/headers/: object.hpp  plane.hpp  sphere.hpp
src/other/legacy/: legacy.cpp
src/other/legacy/objects/: legacy_object.cpp  legacy_plane.cpp  legacy_sphere.cpp
src/other/legacy/raytracing/: legacy_tracing.cpp
src/other/legacy/source/: legacy_source.cpp
src/other/obsolete/postprocess/: blur.cpp  glow.cpp
src/other/sky/: bmp_reader.cpp  image.cpp  screen.cpp  sky_bmp_reader.cpp  sky_render.cpp  sky_render_parallel.cpp  sky_screen.cpp  test_sky.cpp
src/parallel/: parallel.cpp
src/postprocess/: blur.cpp  glow.cpp
src/postprocess/headers/: blur.hpp
src/render/: render_loops.cpp
src/scene/: camera.cpp  scene.cpp
src/scene/bounding/: aabb.cpp
src/scene/headers/: camera.hpp  scene.hpp
src/scene/light_sources/: infinite_area.cpp  tests.cpp
src/scene/material/: background.cpp  material.cpp  normal_map.cpp  texture.cpp  texture_info.cpp
src/scene/material/headers/: material.hpp  texture.hpp
src/scene/objects/: bounding.cpp  box.cpp  cylinder.cpp  object.cpp  plane.cpp  quad.cpp  sphere.cpp  triangle.cpp
src/scene/objects/headers/: bounding.hpp  box.hpp  cylinder.hpp  object.hpp  plane.hpp  quad.hpp  sphere.hpp  triangle.hpp
src/scene/sources/: source.cpp
src/scene/sources/headers/: source.hpp
src/screen/: color.cpp  image.cpp  screen.cpp  vector.cpp
src/screen/headers/: color.hpp  image.hpp  rect.hpp  screen.hpp  vector.hpp
src/sky/: bmp_reader.cpp  image.cpp  screen.cpp  sky_render.cpp  test_sky.cpp
src/tests/: test.cpp  test_alloc.cpp  test_file.cpp  test_infinite_area.cpp  test_reader.cpp  test_signbit.cpp
src/tracing/: debug.cpp  direction.cpp  directions.cpp  multisample.cpp  tracing.cpp
